--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "fonzi2",
-	"version": "0.5.4",
-	"description": "Discord bot starter kit",
+	"name": "rolando2",
+	"version": "0.0.0",
+	"description": "Revamped rolando",
 	"private": true,
 	"type": "commonjs",
 	"engines": {
@@ -30,20 +30,21 @@
 		"ejs": "^3.1.9",
 		"express": "^4.18.2",
 		"firebase": "^10.7.1",
+		"firebase-admin": "^12.0.0",
 		"ts-loader": "^9.5.1",
-		"typescript": "^5.3.2"
+		"typescript": "^5.3.3"
 	},
 	"devDependencies": {
 		"@types/cookie-session": "^2.0.48",
 		"@types/express": "^4.17.21",
 		"@types/express-session": "^1.17.10",
-		"@types/node": "^20.10.1",
+		"@types/node": "^20.10.4",
 		"axios": "^1.6.2",
 		"dotenv": "^16.3.1",
-		"prettier": "^3.1.0",
-		"reflect-metadata": "^0.1.13",
+		"prettier": "^3.1.1",
+		"reflect-metadata": "^0.1.14",
 		"rimraf": "^5.0.5",
-		"ts-node": "^10.9.1",
+		"ts-node": "^10.9.2",
 		"ts-node-dev": "^1.1.8",
 		"webpack": "^5.89.0",
 		"webpack-cli": "^5.1.4",
