--- a/firebase.json
+++ b/firebase.json
@@ -1,20 +1,16 @@
 {
-  "hosting": {
-    "public": "dist",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "/api/**",
-        "function": "api"
-      },
-      {
-        "source": "**",
-        "destination": "/"
-      }
-    ]
-  }
+	"hosting": {
+		"public": "dist",
+		"ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+		"rewrites": [
+			{
+				"source": "/api/**",
+				"function": "api"
+			},
+			{
+				"source": "**",
+				"destination": "/"
+			}
+		]
+	}
 }
