--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "rolando2",
-	"version": "0.1.0",
+	"version": "0.2.0",
 	"description": "Revamped rolando",
 	"private": true,
 	"type": "commonjs",
@@ -30,6 +30,8 @@
 		"ejs": "^3.1.9",
 		"express": "^4.18.2",
 		"firebase": "^10.7.1",
+		"msgpack-lite": "^0.1.26",
+		"object-sizeof": "^2.6.3",
 		"ts-loader": "^9.5.1",
 		"typescript": "^5.3.3"
 	},
@@ -37,6 +39,7 @@
 		"@types/cookie-session": "^2.0.48",
 		"@types/express": "^4.17.21",
 		"@types/express-session": "^1.17.10",
+		"@types/msgpack-lite": "^0.1.11",
 		"@types/node": "^20.10.4",
 		"axios": "^1.6.2",
 		"dotenv": "^16.3.1",
