--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
 	"name": "rolando2",
-	"version": "2.0.0",
+	"version": "2.1.0",
 	"description": "Revamped rolando",
 	"private": true,
 	"type": "commonjs",
 	"engines": {
 		"node": ">=18.12.1",
-		"npm": ">=9.1.1"
+		"npm": ">=8.19.2"
 	},
 	"scripts": {
 		"start": "cross-env NODE_ENV=production node ./dist/bundle.js --enable-source-maps",
@@ -26,27 +26,25 @@
 	"dependencies": {
 		"cookie-session": "^2.0.0",
 		"cors": "^2.8.5",
-		"cross-env": "^7.0.3",
 		"discord.js": "^14.14.1",
 		"ejs": "^3.1.9",
 		"express": "^4.18.2",
 		"firebase": "^10.7.1",
-		"msgpack-lite": "^0.1.26",
+		"fonzi2": "^0.4.5",
 		"object-sizeof": "^2.6.3",
-		"ts-loader": "^9.5.1",
+    "axios": "^1.6.2",
 		"typescript": "^5.3.3"
 	},
 	"devDependencies": {
 		"@types/cookie-session": "^2.0.48",
 		"@types/express": "^4.17.21",
-		"@types/express-session": "^1.17.10",
-		"@types/msgpack-lite": "^0.1.11",
 		"@types/node": "^20.10.4",
-		"axios": "^1.6.2",
+		"cross-env": "^7.0.3",
 		"dotenv": "^16.3.1",
 		"prettier": "^3.1.1",
 		"reflect-metadata": "^0.1.14",
 		"rimraf": "^5.0.5",
+		"ts-loader": "^9.5.1",
 		"ts-node": "^10.9.2",
 		"ts-node-dev": "^1.1.8",
 		"webpack": "^5.89.0",
