--- a/.gitignore
+++ b/.gitignore
@@ -73,6 +73,9 @@ web_modules/
 .yarn-integrity
 
 # dotenv environment variable files
+*.env
+!example.env
+!common.env
 .env
 .env.development.local
 .env.test.local
