--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "rolando2",
-	"version": "2.2.0",
+	"version": "2.3.0",
 	"description": "Revamped rolando",
 	"private": true,
 	"type": "commonjs",
@@ -24,21 +24,20 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"axios": "^1.6.3",
 		"cookie-session": "^2.0.0",
 		"cors": "^2.8.5",
 		"discord.js": "^14.14.1",
 		"ejs": "^3.1.9",
 		"express": "^4.18.2",
-		"firebase": "^10.7.1",
 		"fonzi2": "^0.4.5",
-		"object-sizeof": "^2.6.3",
-    "axios": "^1.6.2",
-		"typescript": "^5.3.3"
+		"mongoose": "^8.0.3",
+		"object-sizeof": "^2.6.3"
 	},
 	"devDependencies": {
 		"@types/cookie-session": "^2.0.48",
 		"@types/express": "^4.17.21",
-		"@types/node": "^20.10.4",
+		"@types/node": "^20.10.6",
 		"cross-env": "^7.0.3",
 		"dotenv": "^16.3.1",
 		"prettier": "^3.1.1",
@@ -47,6 +46,7 @@
 		"ts-loader": "^9.5.1",
 		"ts-node": "^10.9.2",
 		"ts-node-dev": "^1.1.8",
+		"typescript": "^5.3.3",
 		"webpack": "^5.89.0",
 		"webpack-cli": "^5.1.4",
 		"webpack-node-externals": "^3.0.0"
