--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "rolando2",
-	"version": "2.3.6",
+	"version": "2.3.7",
 	"description": "Revamped rolando",
 	"private": true,
 	"type": "commonjs",
@@ -10,9 +10,8 @@
 	},
 	"scripts": {
 		"start": "cross-env NODE_ENV=production node ./dist/bundle.js --enable-source-maps",
-		"dev": "cross-env NODE_ENV=development tsnd --respawn --clear  --debounce --transpile-only ./src/main.ts",
+		"dev": "cross-env NODE_ENV=development tsnd --rs --respawn --cls  --debounce --transpile-only ./src/main.ts",
 		"build": "rimraf dist && webpack --config webpack.config.js --mode production",
-		"build:secrets": "node replit.secrets.mjs",
 		"lint:check": "prettier --check .",
 		"lint": "prettier --write ."
 	},
@@ -41,11 +40,11 @@
 		"cross-env": "^7.0.3",
 		"dotenv": "^16.3.1",
 		"prettier": "^3.1.1",
-		"reflect-metadata": "^0.1.14",
+		"reflect-metadata": "^0.2.1",
 		"rimraf": "^5.0.5",
 		"ts-loader": "^9.5.1",
 		"ts-node": "^10.9.2",
-		"ts-node-dev": "^1.1.8",
+		"ts-node-dev": "^2.0.0",
 		"typescript": "^5.3.3",
 		"webpack": "^5.89.0",
 		"webpack-cli": "^5.1.4",
