--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3'
 services:
   mongodb:
+    restart: always
     image: mongo:latest
     container_name: $COMPOSE_PROJECT_NAME-mongo
     ports:
