--- a/example.env
+++ b/example.env
@@ -1,25 +1,23 @@
-# ![REQUIRED] Bot token
-TOKEN=
+# ! [REQUIRED] MongoDB uri (https://www.mongodb.com/atlas/database)
+# * development: using the integrated docker you can use the default uri mongodb://rolando:rolando@127.0.0.1:27017/?authSource=admin
+# * production: make a mongoDB deployment on atlas or whatever other service you may want to use
+MONGODB_URI=mongodb://rolando:rolando@127.0.0.1:27017/?authSource=admin
 
-# * [Reccomended] A discord channel webhook for development & production logs
-LOG_WEBHOOK=
+# ? create an application at https://discord.com/developers/applications
+# ![REQUIRED] Bot token 
+TOKEN=
 
 # ! [REQUIRED] The bot's oauth2 invite link, scope=bot and only the required permissions
 INVITE_LINK=
 
 # ! [REQUIRED] An OAuth2 URL with:
-# ! development: the redirect_uri (http://localhost:8080/login) scope=identify and response_type=token
-# ! production: a redirect_uri for your production server to /login, scope=identify and response_type=token
+# * development: the redirect_uri (http://localhost:8080/login) scope=identify and response_type=token
+# * production: a redirect_uri for your production server to /login, scope=identify and response_type=token
 OAUTH2_URL=
 
 # * [Reccomended] A Comma (,) separated list of Discord user IDs that can access the admin dashboard
 OWNER_IDS=
 
-# ? Firebase config
-apiKey=
-authDomain=
-projectId=
-storageBucket=
-messagingSenderId=
-appId=
-measurementId=
+# * [Reccomended] A discord channel webhook for development & production logs
+LOG_WEBHOOK=
+
