--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "rolando2",
-	"version": "2.5.0",
+	"version": "2.6.0",
 	"description": "Revamped rolando",
 	"private": true,
 	"type": "commonjs",
@@ -22,30 +22,31 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"axios": "^1.6.3",
-		"cookie-session": "^2.0.0",
+		"axios": "^1.6.6",
+		"cookie-session": "^2.1.0",
 		"cors": "^2.8.5",
 		"discord.js": "^14.14.1",
 		"ejs": "^3.1.9",
 		"express": "^4.18.2",
-		"fonzi2": "^0.5.2",
-		"mongoose": "^8.0.3",
-		"object-sizeof": "^2.6.3"
+		"fonzi2": "^1.1.3",
+		"mongoose": "^8.0.4",
+		"object-sizeof": "^2.6.4",
+		"typedi": "^0.10.0"
 	},
 	"devDependencies": {
 		"@types/cookie-session": "^2.0.48",
 		"@types/express": "^4.17.21",
-		"@types/node": "^20.10.6",
+		"@types/node": "^20.11.6",
 		"cross-env": "^7.0.3",
-		"dotenv": "^16.3.1",
-		"prettier": "^3.1.1",
+		"dotenv": "^16.4.1",
+		"prettier": "^3.2.4",
 		"reflect-metadata": "^0.2.1",
 		"rimraf": "^5.0.5",
 		"ts-loader": "^9.5.1",
 		"ts-node": "^10.9.2",
 		"ts-node-dev": "^2.0.0",
 		"typescript": "^5.3.3",
-		"webpack": "^5.89.0",
+		"webpack": "^5.90.0",
 		"webpack-cli": "^5.1.4",
 		"webpack-node-externals": "^3.0.0"
 	}
