--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,6 @@
 {
-	"liveSassCompile.settings.formats": [
-		{
-			"format": "expanded",
-			"extensionName": ".css",
-			"savePath": "/public/css",
-			"savePathReplacementPairs": null
-		}
-	]
+  "editor.formatOnSave": true,
+  "css.customData": [
+    ".vscode/tailwind.json"
+  ],
 }
