--- a/package.json
+++ b/package.json
@@ -1,53 +1,61 @@
 {
-	"name": "rolando2",
-	"version": "2.6.6",
-	"description": "Revamped rolando",
-	"private": true,
-	"type": "commonjs",
-	"engines": {
-		"node": ">=18"
-	},
-	"scripts": {
-		"start": "cross-env NODE_ENV=production node ./dist/bundle.js --enable-source-maps",
-		"dev": "cross-env NODE_ENV=development tsnd --rs --respawn --cls  --debounce --transpile-only ./src/main.ts",
-		"build": "rimraf dist && webpack --config webpack.config.js --mode production",
-		"lint:check": "prettier --check .",
-		"lint": "prettier --write ."
-	},
-	"keywords": [
-		"discord",
-		"bot",
-		"typescript"
-	],
-	"author": "",
-	"license": "ISC",
-	"dependencies": {
-		"axios": "^1.6.6",
-		"cookie-session": "^2.1.0",
-		"cors": "^2.8.5",
-		"discord.js": "^14.14.1",
-		"ejs": "^3.1.9",
-		"express": "^4.18.2",
-		"fonzi2": "^1.1.4",
-		"mongoose": "^8.0.4",
-		"object-sizeof": "^2.6.4",
-		"typedi": "^0.10.0"
-	},
-	"devDependencies": {
-		"@types/cookie-session": "^2.0.48",
-		"@types/express": "^4.17.21",
-		"@types/node": "^20.11.6",
-		"cross-env": "^7.0.3",
-		"dotenv": "^16.4.1",
-		"prettier": "^3.2.4",
-		"reflect-metadata": "^0.2.1",
-		"rimraf": "^5.0.5",
-		"ts-loader": "^9.5.1",
-		"ts-node": "^10.9.2",
-		"ts-node-dev": "^2.0.0",
-		"typescript": "^5.3.3",
-		"webpack": "^5.90.0",
-		"webpack-cli": "^5.1.4",
-		"webpack-node-externals": "^3.0.0"
-	}
+  "name": "rolando2",
+  "version": "2.7.0",
+  "description": "Revamped rolando",
+  "private": true,
+  "type": "commonjs",
+  "engines": {
+    "node": ">=18"
+  },
+  "scripts": {
+    "dev": "cross-env NODE_ENV=development tsnd --rs --debounce --respawn --clear --transpile-only src/main.ts",
+    "dev:css": "postcss public/css/tailwind.css -o public/css/styles.css -w",
+    "build": "rimraf dist && webpack --config webpack.config.cjs --mode production",
+    "build:css": "postcss public/css/tailwind.css -o public/css/styles.css",
+    "start": "cross-env NODE_ENV=production node dist/bundle.js",
+    "lint": "prettier --write ."
+  },
+  "keywords": [
+    "discord",
+    "bot",
+    "typescript"
+  ],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^1.6.6",
+    "cookie-session": "^2.1.0",
+    "cors": "^2.8.5",
+    "discord.js": "^14.14.1",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "fonzi2": "^1.1.4",
+    "mongoose": "^8.0.4",
+    "object-sizeof": "^2.6.4",
+    "typedi": "^0.10.0"
+  },
+  "devDependencies": {
+    "@types/cookie-session": "^2.0.48",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.6",
+    "autoprefixer": "^10.4.17",
+    "cross-env": "^7.0.3",
+    "cssnano": "^6.0.3",
+    "daisyui": "^4.6.0",
+    "dotenv": "^16.4.1",
+    "postcss": "^8.4.33",
+    "postcss-cli": "^11.0.0",
+    "prettier": "^3.2.4",
+    "prettier-plugin-tailwindcss": "^0.5.11",
+    "reflect-metadata": "^0.2.1",
+    "rimraf": "^5.0.5",
+    "tailwindcss": "^3.4.1",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.3.3",
+    "webpack": "^5.90.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-node-externals": "^3.0.0"
+  }
 }
