--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rolando2",
-  "version": "2.8.3",
+  "version": "2.9.0",
   "description": "Revamped rolando",
   "private": true,
   "type": "commonjs",
@@ -29,12 +29,13 @@
     "discord.js": "^14.14.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "fonzi2": "^1.1.4",
+    "fonzi2": "^1.2.0",
     "mongoose": "^8.0.4",
     "object-sizeof": "^2.6.4",
     "typedi": "^0.10.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.5.3",
     "@types/cookie-session": "^2.0.48",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.6",
