update: example .env

--- a/example.env
+++ b/example.env
@@ -1,23 +1,33 @@
 # ! [REQUIRED] MongoDB uri (https://www.mongodb.com/atlas/database)
-# * development: using the integrated docker you can use the default uri mongodb://rolando:rolando@127.0.0.1:27017/?authSource=admin
-# * production: make a mongoDB deployment on atlas or whatever other service you may want to use
+# ? development: 
+# ? using the integrated docker you can use the default uri mongodb://rolando:rolando@127.0.0.1:27017/?authSource=admin 
+# * production: 
+# * make a mongoDB deployment on atlas (https://www.mongodb.com/atlas/database) 
+# * or whatever other service you may want to use, 
+# * i personally reccomend railway, cheap easy and scalable (https://railway.app)
 MONGODB_URI=mongodb://rolando:rolando@127.0.0.1:27017/?authSource=admin
 
 # ? create an application at https://discord.com/developers/applications
-# ![REQUIRED] Bot token 
+# ! [REQUIRED] Bot token 
 TOKEN=
 
 # ! [REQUIRED] The bot's oauth2 invite link, scope=bot and only the required permissions
 INVITE_LINK=
 
-# ! [REQUIRED] An OAuth2 URL with:
-# * development: the redirect_uri (http://localhost:8080/login) scope=identify and response_type=token
+# ! [REQUIRED] An OAuth2 URL
+# ! Generate an OAuth2 URL for your application in the discord developer portal
+# ! This is different from the OAuth2 Invite link
+# ? development:
+# ? the redirect_uri = http://localhost:8080/login scope=identify and response_type=token
 # * production: a redirect_uri for your production server to /login, scope=identify and response_type=token
 OAUTH2_URL=
 
-# * [Reccomended] A Comma (,) separated list of Discord user IDs that can access the admin dashboard
+# * [Not Required] 
+# * A Comma (,) separated list of Discord user IDs that can access the admin dashboard
+# * Leave emtpy to allow every user with a discord account in the admin dashboard
 OWNER_IDS=
 
-# * [Reccomended] A discord channel webhook for development & production logs
+# * [Not Required] 
+# * A discord channel webhook for development & production logs
 LOG_WEBHOOK=
 
