--- a/.gitignore
+++ b/.gitignore
@@ -82,7 +82,7 @@ web_modules/
 .env.production.local
 .env.local
 replit.secrets.json
-startup.js
+prod/
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
