--- a/docker/common.env
+++ b/docker/common.env
@@ -7,3 +7,8 @@ MONGO_EXTERNAL_PORT=27017
 MONGO_USERNAME=rolando
 MONGO_PASSWORD=rolando
 MONGO_DATABASE=rolando
+
+# Node
+NODE_VERSION=20.9.0
+NODE_INTERNAL_PORT=25576
+NODE_EXTERNAL_PORT=25576
