--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,5 +6,7 @@ ADD .env /app/.env
 ADD dist /app/dist
 ADD package.json /app/package.json
 ADD node_modules /app/node_modules
+ADD views /app/views
+ADD public /app/public
 
 CMD ["npm", "run", "start"]
