--- a/package.json
+++ b/package.json
@@ -1,61 +1,57 @@
 {
-  "name": "rolando2",
-  "version": "2.13.0",
-  "description": "Revamped rolando",
-  "private": true,
-  "type": "commonjs",
-  "engines": {
-    "node": ">=18"
-  },
-  "scripts": {
-    "dev": "cross-env NODE_ENV=development tsnd --rs --debounce --respawn --clear --transpile-only src/main.ts",
-    "dev:css": "postcss public/css/tailwind.css -o public/css/styles.css -w",
-    "build": "rimraf dist && npm run build:css && webpack --config webpack.config.cjs --mode production",
-    "build:css": "postcss public/css/tailwind.css -o public/css/styles.css",
-    "start": "cross-env NODE_ENV=production node dist/bundle.js",
-    "lint": "biome check --apply ./src ./views",
-    "lint:fix": "biome check --apply-unsafe ./src ./views"
-  },
-  "keywords": [
-    "discord",
-    "bot",
-    "typescript"
-  ],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^1.6.8",
-    "cookie-session": "^2.1.0",
-    "cors": "^2.8.5",
-    "discord.js": "^14.14.1",
-    "ejs": "^3.1.9",
-    "express": "^4.19.2",
-    "fonzi2": "^1.3.0",
-    "mongoose": "^8.2.4",
-    "object-sizeof": "^2.6.4",
-    "typedi": "^0.10.0"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "^1.6.3",
-    "@types/cookie-session": "^2.0.48",
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.12.2",
-    "autoprefixer": "^10.4.19",
-    "cross-env": "^7.0.3",
-    "cssnano": "^6.1.2",
-    "daisyui": "^4.9.0",
-    "dotenv": "^16.4.5",
-    "postcss": "^8.4.38",
-    "postcss-cli": "^11.0.0",
-    "reflect-metadata": "^0.2.2",
-    "rimraf": "^5.0.5",
-    "tailwindcss": "^3.4.3",
-    "ts-loader": "^9.5.1",
-    "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.4.3",
-    "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-node-externals": "^3.0.0"
-  }
+	"name": "rolando2",
+	"version": "2.13.1",
+	"description": "Revamped rolando",
+	"private": true,
+	"type": "commonjs",
+	"engines": {
+		"node": ">=18"
+	},
+	"scripts": {
+		"dev": "cross-env NODE_ENV=development tsnd --rs --debounce --respawn --clear --transpile-only src/main.ts",
+		"dev:css": "postcss public/css/tailwind.css -o public/css/styles.css -w",
+		"build": "rimraf dist && npm run build:css && webpack --config webpack.config.cjs --mode production",
+		"build:css": "postcss public/css/tailwind.css -o public/css/styles.css",
+		"start": "cross-env NODE_ENV=production node dist/bundle.js",
+		"lint": "biome check --apply ./src ./views",
+		"lint:fix": "biome check --apply-unsafe ./src ./views"
+	},
+	"keywords": ["discord", "bot", "typescript"],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"axios": "^1.6.8",
+		"cookie-session": "^2.1.0",
+		"cors": "^2.8.5",
+		"discord.js": "^14.14.1",
+		"ejs": "^3.1.9",
+		"express": "^4.19.2",
+		"fonzi2": "^1.3.0",
+		"mongoose": "^8.2.4",
+		"object-sizeof": "^2.6.4",
+		"typedi": "^0.10.0"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "^1.6.3",
+		"@types/cookie-session": "^2.0.48",
+		"@types/express": "^4.17.21",
+		"@types/node": "^20.12.2",
+		"autoprefixer": "^10.4.19",
+		"cross-env": "^7.0.3",
+		"cssnano": "^6.1.2",
+		"daisyui": "^4.9.0",
+		"dotenv": "^16.4.5",
+		"postcss": "^8.4.38",
+		"postcss-cli": "^11.0.0",
+		"reflect-metadata": "^0.2.2",
+		"rimraf": "^5.0.5",
+		"tailwindcss": "^3.4.3",
+		"ts-loader": "^9.5.1",
+		"ts-node": "^10.9.2",
+		"ts-node-dev": "^2.0.0",
+		"typescript": "^5.4.3",
+		"webpack": "^5.91.0",
+		"webpack-cli": "^5.1.4",
+		"webpack-node-externals": "^3.0.0"
+	}
 }
