update: example.env explanations for setup

--- a/example.env
+++ b/example.env
@@ -9,6 +9,7 @@ MONGODB_URI=mongodb://rolando:rolando@127.0.0.1:27017/?authSource=admin
 
 # ? create an application at https://discord.com/developers/applications
 # ! [REQUIRED] Bot token 
+# ! Make sure to have the Message Content priviliged intent enabled
 TOKEN=
 
 # ! [REQUIRED] The bot's oauth2 invite link, scope=bot and only the required permissions
