--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,12 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "@bufbuild/protobuf": "^2.2.3",
     "@formkit/auto-animate": "^0.8.2",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@grpc/grpc-js": "^1.12.5",
     "@mdi/font": "7.4.47",
+    "@protobuf-ts/plugin": "^2.9.4",
     "core-js": "^3.37.1",
     "roboto-fontface": "*",
     "vue": "^3.4.31",
@@ -22,6 +25,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
+    "@grpc/proto-loader": "^0.7.13",
     "@tsconfig/node22": "^22.0.0",
     "@types/node": "^22.9.0",
     "@vitejs/plugin-vue": "^5.1.4",
@@ -29,6 +33,7 @@
     "@vue/tsconfig": "^0.5.1",
     "eslint": "^9.14.0",
     "eslint-plugin-vue": "^9.30.0",
+    "grpc-tools": "^1.12.4",
     "npm-run-all2": "^7.0.1",
     "pinia": "^2.1.7",
     "sass": "1.77.8",
