--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@formkit/auto-animate": "^0.8.2",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@mdi/font": "7.4.47",
+    "@tanstack/vue-query": "^5.62.9",
     "core-js": "^3.37.1",
     "pinia-plugin-persistedstate": "^4.2.0",
     "roboto-fontface": "*",
@@ -24,7 +25,7 @@
   "devDependencies": {
     "@eslint/js": "^9.14.0",
     "@tsconfig/node22": "^22.0.0",
-    "@types/node": "^22.9.0",
+    "@types/node": "^22.10.3",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vue/eslint-config-typescript": "^14.1.3",
     "@vue/tsconfig": "^0.5.1",
