--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,8 @@
     "@mdi/font": "7.4.47",
     "@tanstack/vue-query": "^5.62.9",
     "core-js": "^3.37.1",
+    "dompurify": "^3.2.3",
+    "marked": "^15.0.5",
     "pinia-plugin-persistedstate": "^4.2.0",
     "roboto-fontface": "*",
     "vue": "^3.4.31",
