add basic container setup

--- a/.container/docker-compose.yml
+++ b/.container/docker-compose.yml
@@ -1,9 +1,40 @@
+version: "3.8"
+
 services:
-  bot:
-    build: .
-    container_name: rolando
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    image: ${BACKEND_IMAGE}
     ports:
-      - "8080:8080"
+      - "${BACKEND_PORT}:${BACKEND_PORT}"
+    environment:
+      - DB_PATH=${DB_PATH}
     volumes:
-      - ./database:/root/database
-    restart: unless-stopped
+      - ./.container/backend:/app
+      - backend_data:${DB_PATH}
+    restart: on-failure
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "5"
+
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    image: ${FRONTEND_IMAGE}
+    ports:
+      - "${FRONTEND_PORT}:${FRONTEND_PORT}"
+    restart: on-failure
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "5"
+
+volumes:
+  backend_data:
+    driver: local
+
