--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -9,6 +9,7 @@ server {
 
     location /api {
         proxy_pass http://backend:8080;
+        rewrite ^/api/(.*)$ /$1 break;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
